# traditional-vs-cripto-analisys

./: README.md  pyproject.toml
config/: pipeline_config.yaml
context/: context.txt  sample.xlsx
data/processed/: portfolio_metrics_6months.csv  processed_portfolio_data.parquet
data/raw/: bonds_raw.parquet  crypto_data.parquet  crypto_raw.parquet  stocks_data.parquet  stocks_raw.parquet
notebooks/: 01_portfolio_analysis_6months.ipynb  01_portfolio_analysis_pipeline.py  README.md
notebooks/.ipynb_checkpoints/: 01_portfolio_analysis_6months-checkpoint.ipynb
src/: app.py  config_loader.py  data_loader.py  metrics.py  preprocessing.py  run_pipeline.py  validator.py
src/workflows/: data_pipeline.py
